home image height to auto and altered mug image to stop it stretching out of proportion

--- a/Stuff_My_Wife_Says/static/css/styles.css
+++ b/Stuff_My_Wife_Says/static/css/styles.css
@@ -181,7 +181,7 @@ label {
 
 .image-links img {
     width: 300px;
-    height: 340px;
+    height: auto;
     border: 2px solid black;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
